--- a/docs/src/main/asciidoc/user-guide/topics/running-atlasmap-with-apache-camel.adoc
+++ b/docs/src/main/asciidoc/user-guide/topics/running-atlasmap-with-apache-camel.adoc
@@ -21,4 +21,4 @@ uses `key` as a document ID and the corresponding value as the
 document payload.
 
 You can obtain the `camel-atlasmap` component here:   
-link:http://central.maven.org/maven2/io/atlasmap/camel-atlasmap/1.42.3/camel-atlasmap-1.42.3.jar[]
+link:https://repo1.maven.org/maven2/io/atlasmap/camel-atlasmap/1.42.3/camel-atlasmap-${VERSION}.jar[]
